[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/HUD.gd" type="Script" id=1]

[node name="HUD" type="Node2D"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 80.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.0431373, 0.027451, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Lives" type="Label" parent="."]
margin_left = 104.0
margin_top = 16.0
margin_right = 176.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="."]
margin_left = 216.0
margin_top = 16.0
margin_right = 312.0
margin_bottom = 36.0
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="."]
margin_left = 336.0
margin_top = 16.0
margin_right = 432.0
margin_bottom = 36.0
text = "LOAD"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
